# haskell-realworld

./: .gitignore  cabal.project  default.nix  hie.yaml  shell.nix
api/: api.cabal  realworld-api.cabal
api/src/: Lib.hs
backend/: realworld-backend.cabal
backend/common/: realworld-backend.cabal
backend/fused-effects/: realworld-backend-fused-effects.cabal
backend/fused-effects/src/: Main.hs
backend/src/: Main.hs
backend/src/RealWorld/: Handler.hs
