cabal-version: >= 1.10
name: realworld-backend
version: 0.1.0
build-type: Simple

executable realworld-backend
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: aeson
               , base
               , beam-core
               , beam-postgres
               , fused-effects
               , hasql
               , hasql-th
               , mtl
               , realworld-api
               , servant-auth-server
               , servant-server
               , squeal-postgresql
               , text
               , transformers
               , validation-selective
               , wai
               , warp
