cabal-version: >= 1.10
name: realworld-backend-fused-effects
version: 0.1.0
build-type: Simple

executable realworld-backend-fused-effects
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base
               , realworld-api
               , realworld-backend
               , text
